--- a/tests/ui_tests/test_provider_page_data/provider_required_fields/config.yaml
+++ b/tests/ui_tests/test_provider_page_data/provider_required_fields/config.yaml
@@ -19,20 +19,20 @@
       type: group
       subs:
         - name: just_item
-          display_name: "Just item"
+          display_name: "Test item"
           type: float
           required: no
         - name: required_item
-          display_name: "Required item"
+          display_name: "Test Required item"
           type: integer
           required: yes
     - name: important_password
-      display_name: "Important password"
+      display_name: "Test password"
       type: password
     - name: advanced_one
       display_name: "Advanced option"
       type: string
-      default: "Hello there"
+      default: "Test option"
       required: yes
       ui_options:
         advanced: true
