--- a/tests/functional/test_plugins_multi_state_set_unset_data/cluster_double_call/config.yaml
+++ b/tests/functional/test_plugins_multi_state_set_unset_data/cluster_double_call/config.yaml
@@ -28,6 +28,16 @@
       states:
         available: any
 
+    double_unset:
+      type: task
+      scripts:
+        - name: first_unset_actions
+          script_type: ansible
+          script: unset_first.yaml
+        - name: second_unset_actions
+          script_type: ansible
+          script: unset_second.yaml
+
 - type: service
   name: first
   version: 1
