--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,5 +1,5 @@
 --extra-index-url https://ci.arenadata.io/artifactory/api/pypi/python-packages/simple
-git+https://github.com/arenadata/adcm_client.git@20cabfb8594135c033ea3d60a327688477030517
+adcm-client>=2021.7.21
 adcm_pytest_plugin~=4.7
 allure-pytest
 delayed_assert
