--- a/tests/functional/test_plugins_state_data/hostprovider/set_host_from_provider.yaml
+++ b/tests/functional/test_plugins_state_data/hostprovider/set_host_from_provider.yaml
@@ -1,16 +1,9 @@
 ---
-- hosts: all
+- hosts: localhost
   gather_facts: false
   connection: local
   tasks:
     - adcm_state:
-        host_id: "{{ adcm_hostid }}"
+        host_id: "{{ job.config.host_id }}"
         type: "host"
-        state: "stateq"
-      register: out
-      when: inventory_hostname == job.config.fqdn
-
-    - name: "Check return value"
-      fail:
-        msg: "Expected value is stateq, actual value is {{ out.state }}"
-      when: inventory_hostname == job.config.fqdn and out.state != "stateq"
+        state: "ifeelgood!"
