--- a/tests/ui_tests/test_provider_page_data/provider_required_fields/config.yaml
+++ b/tests/ui_tests/test_provider_page_data/provider_required_fields/config.yaml
@@ -14,44 +14,31 @@
 - type: provider
   name: test_provider
   version: 2.15
-  actions:
-    test_action:
-      type: job
-      script: dummy_action.yaml
-      script_type: ansible
-      states:
-        available:
-          - created
-        on_success: installed
   config:
-    str_param:
-      type: string
-      required: false
-      default: '0000'
-      description: must be changed to bar()
-    int:
-      type: integer
-      required: false
-      default: 2
-      description: must be changed to 5
-    core-site:
-      param1:
-          type: string
-          required: false
-      param2:
+    - name: group_one
+      type: group
+      subs:
+        - name: just_item
+          display_name: "Test item"
+          type: float
+          required: no
+        - name: required_item
+          display_name: "Test Required item"
           type: integer
-          required: false
+          required: yes
+    - name: important_password
+      display_name: "Test password"
+      type: password
+    - name: advanced_one
+      display_name: "Advanced option"
+      type: string
+      default: "Test option"
+      required: yes
+      ui_options:
+        advanced: true
+
 
 - type: host
   name: "Test Host"
   description: "Test Host Description"
   version: 0.1.13
-  actions:
-    test_action:
-      type: job
-      script: dummy_action.yaml
-      script_type: ansible
-      states:
-        available:
-          - created
-        on_success: installed
