--- a/tests/functional/test_config_data/required/with_default/sent_empty_value/list/cluster/service_action.yaml
+++ b/tests/functional/test_config_data/required/with_default/sent_empty_value/list/cluster/service_action.yaml
@@ -3,8 +3,11 @@
   hosts: host_list_required_with_default_sent_empty_value
   gather_facts: false
   vars:
-    sent_value: &id001 []
-    test_value: *id001
+    sent_value: []
+    test_value:
+      - /dev/rdisk0s1
+      - /dev/rdisk0s2
+      - /dev/rdisk0s3
   tasks:
   - name: Ansible | List all known variables and facts
     debug:
