--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -2,3 +2,5 @@
 markers =
     full: mark a test to be excluded from ordinary branch test run
     smoke: mark tests that covers the very basic functionality
+    negative: marks tests as negative (deselect with '-m "not negative"')
+    positive: marks tests as positive (select only positive with '-m "positive"')
