Fix unset test actions Add steps and better messages

--- a/tests/functional/test_plugins_multi_state_set_unset_data/cluster_double_call/config.yaml
+++ b/tests/functional/test_plugins_multi_state_set_unset_data/cluster_double_call/config.yaml
@@ -37,6 +37,8 @@
         - name: second_unset_actions
           script_type: ansible
           script: unset_second.yaml
+      states:
+        available: any
 
 - type: service
   name: first
