Add steps of multi state asserts Fix unset configs

--- a/tests/functional/test_plugins_multi_state_set_unset_data/cluster_double_call/unset_second.yaml
+++ b/tests/functional/test_plugins_multi_state_set_unset_data/cluster_double_call/unset_second.yaml
@@ -15,6 +15,6 @@
   connection: local
   gather_facts: false
   tasks:
-    - adcm_multi_state_set:
+    - adcm_multi_state_unset:
         type: "cluster"
         state: "better"
