Tests on cluster related objects unset with true missing_ok

--- a/tests/functional/test_plugins_multi_state_set_unset_data/cluster/config.yaml
+++ b/tests/functional/test_plugins_multi_state_set_unset_data/cluster/config.yaml
@@ -90,6 +90,11 @@
       params:
         ansible_tags: cluster
 
+    unset_cluster_missing:
+      <<: *unset_action
+      params:
+        ansible_tags: cluster_missing
+
     unset_service:
       <<: *unset_action
       params:
