--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,5 +1,5 @@
 --extra-index-url https://ci.arenadata.io/artifactory/api/pypi/python-packages/simple
-adcm-client==2021.8.26.15rc85
+adcm-client>=2021.7.21
 adcm_pytest_plugin~=4.7
 attr
 allure-pytest
