--- a/tests/functional/test_plugins_config_data/cluster/component.yaml
+++ b/tests/functional/test_plugins_config_data/cluster/component.yaml
@@ -35,7 +35,7 @@
   connection: local
   tasks:
     - adcm_config:
-        type: "provider"
+        type: "component"
         key: "int"
         value: *new_int
       register: out
@@ -50,7 +50,7 @@
         - int
 
     - adcm_config:
-        type: "provider"
+        type: "component"
         key: "float"
         value: *new_float
       register: out
@@ -65,7 +65,7 @@
         - float
 
     - adcm_config:
-        type: "provider"
+        type: "component"
         key: "text"
         value: *new_text
       register: out
@@ -80,7 +80,7 @@
         - text
 
     - adcm_config:
-        type: "provider"
+        type: "component"
         key: "file"
         value: *new_file
       register: out
@@ -95,7 +95,7 @@
         - file
 
     - adcm_config:
-        type: "provider"
+        type: "component"
         key: "string"
         value: *new_string
       register: out
@@ -110,7 +110,7 @@
         - string
 
     - adcm_config:
-        type: "provider"
+        type: "component"
         key: "json"
         value: *new_json
       register: out
@@ -125,7 +125,7 @@
         - json
 
     - adcm_config:
-        type: "provider"
+        type: "component"
         key: "list"
         value: *new_list
       register: out
@@ -140,7 +140,7 @@
         - list
 
     - adcm_config:
-        type: "provider"
+        type: "component"
         key: "map"
         value: *new_map
       register: out
