--- a/tests/functional/test_plugins_config_data/provider/host_from_provider.yaml
+++ b/tests/functional/test_plugins_config_data/provider/host_from_provider.yaml
@@ -1,5 +1,16 @@
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#      http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
 ---
-- hosts: all
+- hosts: localhost
 
   vars:
     new_int: &new_int 2
@@ -26,137 +37,72 @@
   connection: local
   tasks:
     - adcm_config:
-        host_id: "{{ adcm_hostid }}"
+        host_id: "{{ job.config.host_id }}"
         type: "host"
         key: "int"
         value: *new_int
-      register: out
-      tags:
-        - int
-      when: inventory_hostname == job.config.fqdn
-
-    - name: "Check return value"
-      fail:
-        msg: "Expected value is {{ new_int }}, actual value is {{ out.value }}"
-      when: inventory_hostname == job.config.fqdn and out.value != new_int
       tags:
         - int
 
     - adcm_config:
-        host_id: "{{ adcm_hostid }}"
+        host_id: "{{ job.config.host_id }}"
         type: "host"
         key: "float"
         value: *new_float
       register: out
       tags:
         - float
-      when: inventory_hostname == job.config.fqdn
-
-    - name: "Check return value"
-      fail:
-        msg: "Expected value is {{ new_float }}, actual value is {{ out.value }}"
-      when: inventory_hostname == job.config.fqdn and out.value != new_float 
-      tags:
-        - float
 
     - adcm_config:
-        host_id: "{{ adcm_hostid }}"
+        host_id: "{{ job.config.host_id }}"
         type: "host"
         key: "text"
         value: *new_text
       register: out
       tags:
         - text
-      when: inventory_hostname == job.config.fqdn
-
-    - name: "Check return value"
-      fail:
-        msg: "Expected value is {{ new_text }}, actual value is {{ out.value }}"
-      when: inventory_hostname == job.config.fqdn and out.value != new_text
-      tags:
-        - text
 
     - adcm_config:
-        host_id: "{{ adcm_hostid }}"
+        host_id: "{{ job.config.host_id }}"
         type: "host"
         key: "file"
         value: *new_file
       register: out
       tags:
         - file
-      when: inventory_hostname == job.config.fqdn
-
-    - name: "Check return value"
-      fail:
-        msg: "Expected value is {{ new_file }}, actual value is {{ out.value }}"
-      when: inventory_hostname == job.config.fqdn and out.value != new_file
-      tags:
-        - file
 
     - adcm_config:
-        host_id: "{{ adcm_hostid }}"
+        host_id: "{{ job.config.host_id }}"
         type: "host"
         key: "string"
         value: *new_string
       register: out
       tags:
         - string
-      when: inventory_hostname == job.config.fqdn
-
-    - name: "Check return value"
-      fail:
-        msg: "Expected value is {{ new_string }}, actual value is {{ out.value }}"
-      when: inventory_hostname == job.config.fqdn and out.value != new_string
-      tags:
-        - string
 
     - adcm_config:
-        host_id: "{{ adcm_hostid }}"
+        host_id: "{{ job.config.host_id }}"
         type: "host"
         key: "json"
         value: *new_json
       register: out
       tags:
         - json
-      when: inventory_hostname == job.config.fqdn
-
-    - name: "Check return value"
-      fail:
-        msg: "Expected value is {{ new_json }}, actual value is {{ out.value }}"
-      when: inventory_hostname == job.config.fqdn and out.value != new_json
-      tags:
-        - json
 
     - adcm_config:
-        host_id: "{{ adcm_hostid }}"
+        host_id: "{{ job.config.host_id }}"
         type: "host"
         key: "list"
         value: *new_list
       register: out
       tags:
         - list
-      when: inventory_hostname == job.config.fqdn
-
-    - name: "Check return value"
-      fail:
-        msg: "Expected value is {{ new_list }}, actual value is {{ out.value }}"
-      when: inventory_hostname == job.config.fqdn and out.value != new_list
-      tags:
-        - list
 
     - adcm_config:
-        host_id: "{{ adcm_hostid }}"
+        host_id: "{{ job.config.host_id }}"
         type: "host"
         key: "map"
         value: *new_map
       register: out
-      tags:
-        - map
-      when: inventory_hostname == job.config.fqdn
-
-    - name: "Check return value"
-      fail:
-        msg: "Expected value is {{ new_map }}, actual value is {{ out.value }}"
-      when: inventory_hostname == job.config.fqdn and out.value != new_map
       tags:
         - map
