config added to unset_host_from_provider_missing

--- a/tests/functional/test_plugins_multi_state_set_unset_data/provider/config.yaml
+++ b/tests/functional/test_plugins_multi_state_set_unset_data/provider/config.yaml
@@ -67,6 +67,9 @@
       <<: *unset_action
       params:
         ansible_tags: provider_host_missing
+      config:
+        - name: host_id
+          type: integer
 
     unset_host_missing:
       <<: *unset_action
