--- a/tests/functional/test_action_config_data/provider/config.yaml
+++ b/tests/functional/test_action_config_data/provider/config.yaml
@@ -10,9 +10,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-- type: cluster
-  name: test_cluster
-  version: 1.5
+- type: provider
+  name: test_provider
+  version: 1.3
   edition: community
 
   actions: &common_actions
@@ -32,12 +32,8 @@
         - name: some_param
           type: string
 
-- type: service
-  name: test_service
+- type: host
+  name: test_host
   version: 101
 
   actions: *common_actions
-
-  components:
-    test_component:
-      actions: *common_actions
