--- a/assemble/base/requirements-base.txt
+++ b/assemble/base/requirements-base.txt
@@ -11,7 +11,8 @@ drf-extensions
 django-background-tasks
 social-auth-app-django
 git+git://github.com/arenadata/django-generate-secret-key.git
-jinja2
+Jinja2==2.11.3
+MarkupSafe==1.1.1
 markdown
 mitogen
 pyyaml
