--- a/tests/functional/test_states_data/cluster_and_service/non_multi_new_dsl_fail/config.yaml
+++ b/tests/functional/test_states_data/cluster_and_service/non_multi_new_dsl_fail/config.yaml
@@ -40,7 +40,7 @@
           script: fail.yaml
           masking:
           on_fail:
-            stete: "non_multi_fail"
+            state: "non_multi_fail"
           on_success:
             state: "non_multi_ok"
     second_cmp:
