ADCM-2087_ add tests for group config changing

--- a/tests/functional/test_config_groups_data/provider_group_with_all_params/provider/config.yaml
+++ b/tests/functional/test_config_groups_data/provider_group_with_all_params/provider/config.yaml
@@ -49,7 +49,7 @@
     - name: file
       type: file
       required: false
-      default: ./cluster_file
+      default: ./provider_file
       group_customization: true
     - name: option
       type: option
